# proyecto_violencia_digital

./: GEMINI.md  PLAN_POWERBI.md  bitacora.md  inventario_columnas_raw_data.md  main.py  pyproject.toml
context/: Analisis_Data_Fase1_Fase2.ipynb  INFORME.md
notebooks/: 04_Preparacion_Indicadores.ipynb  05_Relacion_Interculturalidad.ipynb  Analisis_Docentes.ipynb  Analisis_Estudiantes.ipynb  Analisis_Interseccional.ipynb  Analisis_Padres.ipynb
output/: BBDD_Brechas_Consolidado.csv  df_consolidado_interculturalidad.xlsx  df_docentes_final.xlsx  df_estudiantes_final.xlsx  df_estudiantes_indicadores_COMPLETO.xlsx  df_estudiantes_indicadores_FILTRADO.xlsx  df_padres_final.xlsx
raw_data/: BBDD_Docentes_dash.xlsx  BBDD_Estudiantes_dash.xlsx  BBDD_Padres_dash.xlsx
reports/: reporte_implementacion_powerbi.md  reporte_interculturalidad.md  reporte_preparacion_indicadores.md  reporte_unificado_indicadores.docx  reporte_unificado_indicadores.md
